[package]
name = "testJup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
solana-program = "1.15.2"
jupiter-cpi = "4.0.1"
#jupiter-cpi  = { git = "https://github.com/jup-ag/jupiter-cpi", version = "4.0.1" }

