[package]
name = "testJup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
solana-program = "^1.13.5"
jupiter-cpi = "4.0.2"
anchor-lang = "0.26.0"
#jupiter-cpi  = { git = "https://github.com/jup-ag/jupiter-cpi", version = "4.0.1" }

[lib]
name = "testJup"
crate-type = ["cdylib", "lib"]
